--- a/template.tex
+++ b/template.tex
@@ -1,25 +1,36 @@
 \documentclass[a4paper, fontsize=10pt]{scrartcl}
 
-\usepackage[utf8x]{inputenc}
+% Language
 \usepackage[ngerman]{babel}
+\usepackage[utf8x]{inputenc}
+
+%Geometry
+\usepackage[margin=3cm]{geometry}
+\usepackage[usenames,dvipsnames]{color}
+
 \usepackage{mathpazo}
 \usepackage{MnSymbol}
 \usepackage{Myriad}
-\usepackage[usenames,dvipsnames]{color}
-\usepackage[margin=3cm]{geometry}
 
+\usepackage[dvipsnames]{xcolor}
+\definecolor{uzl-blue}{RGB}{0,75,90}
+\definecolor{uzl-orange}{RGB}{255,106,32}
+
+\newcommand{\header}[1]{\begin{center}\Huge\textsc{{\color{uzl-blue}#1}}\end{center}}
+\newcommand{\semester}[1]{#1\hfill\today\\[0.2 cm]}
+\newcommand{\topic}[2]{\Large{\color{uzl-orange}#1\hfill\large#2}\\[0.2cm] }
+\newcommand{\student}[2]{\small{\textsc{#1},~\textsc{#2}}}
 
 \begin{document}
 
-\begin{center} \Large  \textsc{{\color{MidnightBlue}Fach}} \end{center}
-\textsc{Semester Jahr/Jahr} \hfill \today \\[0.2 cm]
-\Large \textsc{Serie 1} \hfill \large \textsc{Informatik}\\[0.2cm]
-\small {\color{MidnightBlue}\textsc{Name Vorname} \quad \textsc{123456}}
+\header{Fach}
+\semester{Semester/Jahr}
+\topic{Serie 1}{Informatik}
+\student{Max Mustermann}{123456} \\
+\student{Peter Lustig}{666666}
 
 	\section*{Aufgabe 1.2}
-		\input{12.tex}
 
 	\section*{Aufgabe 1.3}
-		\input{13.tex}
 
 \end{document}
