Swapped date and semester for better logical structure

--- a/template.tex
+++ b/template.tex
@@ -17,7 +17,7 @@
 \definecolor{uzl-orange}{RGB}{255,106,32}
 
 \newcommand{\header}[1]{\begin{center}\Huge\textsc{{\color{uzl-blue}#1}}\end{center}}
-\newcommand{\semester}[1]{#1\hfill\today\\[0.2 cm]}
+\newcommand{\semester}[1]{\today\hfill#1\\[0.2 cm]}
 \newcommand{\topic}[2]{\Large{\color{uzl-orange}#1\hfill\large#2}\\[0.2cm] }
 \newcommand{\student}[2]{\small{\textsc{#1},~\textsc{#2}}}
 
