--- a/template.tex
+++ b/template.tex
@@ -1,36 +1,43 @@
-\documentclass[a4paper, fontsize=10pt]{scrartcl}
+\documentclass[a4paper]{article}
 
 % Language
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
-\usepackage[utf8x]{inputenc}
 
-%Geometry
-\usepackage[margin=3cm]{geometry}
-\usepackage[usenames,dvipsnames]{color}
+% Design
+\usepackage[margin=2.5cm,top=2cm]{geometry}
+\usepackage[sfdefault]{roboto}
+\usepackage[bitstream-charter]{mathdesign}
+\usepackage{microtype, graphicx, amsmath, xcolor, tikz}
 
-\usepackage{mathpazo}
-\usepackage{MnSymbol}
-\usepackage{Myriad}
-
-\usepackage[dvipsnames]{xcolor}
 \definecolor{uzl-blue}{RGB}{0,75,90}
 \definecolor{uzl-orange}{RGB}{255,106,32}
+\setlength\parindent{0pt}
 
-\newcommand{\header}[1]{\begin{center}\Huge\textsc{{\color{uzl-blue}#1}}\end{center}}
-\newcommand{\semester}[1]{\today\hfill#1\\[0.2 cm]}
-\newcommand{\topic}[2]{\Large{\color{uzl-orange}#1\hfill\large#2}\\[0.2cm] }
-\newcommand{\student}[2]{\small{\textsc{#1},~\textsc{#2}}}
+\newcommand{\header}[3]{
+	\begin{tikzpicture}[remember picture,overlay]
+		\path[fill=uzl-blue](-5cm,5cm)rectangle(20cm,-3cm);
+		\node[]at(0,-0.5cm){\includegraphics[]{Logo_white.png}};
+	\end{tikzpicture}
+
+	{\color{white}\hspace{2cm}\begin{minipage}[t]{0.7\textwidth}
+		\Huge #1 \\ \Large #2
+	\end{minipage}\begin{minipage}[t]{0.2\textwidth}\begin{flushright}
+		\today \\ \large #3 \\
+	\end{flushright}\end{minipage}}\vspace{2cm}
+}
 
 \begin{document}
 
-\header{Fach}
-\semester{Semester/Jahr}
-\topic{Serie 1}{Informatik}
-\student{Max Mustermann}{123456} \\
-\student{Peter Lustig}{666666}
+	\header{Assignment Title}{Semester, Department}{Group}
+	{\color{uzl-orange}
+		Student 1, 123456 \hspace{1cm}
+		Student 12, 789123
+	}
 
-	\section*{Aufgabe 1.2}
+	\section*{1.2}
 
-	\section*{Aufgabe 1.3}
+	\section*{1.3}
 
 \end{document}
